[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "harmonize.dev"
version = "1.0.0"
authors = ["Krista"]
description = "A robust and powerful, fully asynchronous Lavalink wrapper built for disnake in Python."
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pip = "^24.2"
disnake = "^2.9.2"
aiohttp = "^3.10.4"
loguru = "^0.6.0"
async-timeout = "^4.0.2"

[project]
name = "harmonize.py"
version = "1.0.0"
authors = [
    { name = "Krista", email = "contactchisato@gmail.com" },
]
dynamic = ["dependencies"]
description = "A robust and powerful, fully asynchronous Lavalink wrapper built for disnake in Python."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/Krispeckt/Harmonize"

[tool.setuptools]
packages = [
    "harmonize",
    "harmonize.abstract",
    "harmonize.connection",
    "harmonize.connection.cache",
    "harmonize.connection.cache.nodes",
    "harmonize.enums",
    "harmonize.objects",
    "harmonize.objects.filters",
]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.package-data]
harmonize = ["py.typed"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pyright]
ignore = ["test*.py", "examples/*.py", "docs/*"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportPrivateUsage = false